syntax = "proto3";

package spellingbee.v1;
option go_package = "spelling-bee-game/api/spellingbee/v1;managerpb";

service Manager {
  rpc CreateGame(CreateGameRequest) returns (CreateGameResponse);
  rpc EndGame(EndGameRequest) returns (EndGameResponse);
  rpc Score(ScoreRequest) returns (ScoreResponse);
  rpc Submit(SubmitRequest) returns (SubmitResponse);
}

message CreateGameRequest {}
message CreateGameResponse { int32 id = 1; string letters = 2; }

message EndGameRequest { int32 id = 1; }
message EndGameResponse { int32 score = 1; }

message ScoreRequest { int32 id = 1; }
message ScoreResponse { int32 score = 1; }

message SubmitRequest { int32 id = 1; string guess = 2; }
message SubmitResponse { string message = 1; int32 score = 2; }
